Connected API. Now displays games in cards.

--- a/game-reviw/package.json
+++ b/game-reviw/package.json
@@ -1,6 +1,7 @@
 {
   "name": "game-reviw",
   "version": "0.1.0",
+  "proxy": "https://api.rawg.io",
   "private": true,
   "scripts": {
     "dev": "next dev",
