--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "firebase": "^11.0.2",
