--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "next-auth": "^4.24.10",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.1",
+    "swiper": "^11.1.15",
     "typescript": "^5.7.2"
   }
 }
