--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
+    "chart.js": "^4.4.7",
     "firebase": "^11.0.2",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
+    "react-chartjs-2": "^5.3.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.1",
     "swiper": "^11.1.15",
