--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/node": "^22.10.1",
-    "@types/react": "^18.3.12",
     "chart.js": "^4.4.7",
     "firebase": "^11.0.2",
     "next": "^15.0.3",
@@ -12,5 +13,9 @@
     "react-router-dom": "^7.0.1",
     "swiper": "^11.1.15",
     "typescript": "^5.7.2"
+  },
+  "devDependencies": {
+    "@types/react": "^19.0.2",
+    "@types/react-dom": "^19.0.2"
   }
 }
