--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^7.0.1",
     "swiper": "^11.1.15",
+    "tailwind-scrollbar": "^4.0.0-beta.0",
     "typescript": "^5.7.2"
   },
   "devDependencies": {
